--- a/helloportafolio/src/components/css/Home.module.css
+++ b/helloportafolio/src/components/css/Home.module.css
@@ -80,7 +80,7 @@
 
 .skill {
   padding: 15px;
-  background: #d3d3d3;        
+  background: #f0f0f0;         
   border-radius: 10px;         
   font-weight: bold;
   color: #333;
