--- a/helloportafolio/src/components/css/Home.module.css
+++ b/helloportafolio/src/components/css/Home.module.css
@@ -2,9 +2,21 @@
   position: relative;
 }
 
+/* Video que actúa como background-image */
+.videoFondo {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Cubre toda la sección hero sin distorsión */
+  z-index: -1; /* Detrás del contenido de hero */
+}
+
 .hero {
   height: 50vh;
-  background-image: url("../../assets/FondoHome.jpg");
+  /* background-image: url("../../assets/FondoHome.jpg"); */
+  background: transparent;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
