--- a/helloportafolio/src/components/css/Home.module.css
+++ b/helloportafolio/src/components/css/Home.module.css
@@ -64,7 +64,7 @@
   padding-top: 7%; */
   padding: 95px 90px 20px;
   background-color: rgb(255, 255, 255);
-  color: #000000;
+  color: #333333;
   font-size: 1.2rem;
 }
 
@@ -78,7 +78,7 @@
 .habilidades h2 {
   font-size: 2rem;
   margin-bottom: 20px;
-  color: #222;
+  color: #016B61;
 }
 
 /* Cuadrícula */
@@ -95,7 +95,7 @@
   background: #E5E9C5;         
   border-radius: 10px;         
   font-weight: bold;
-  color: #333;
+  color: #333333;
   transition: transform 0.3s ease; 
 }
 
