--- a/helloportafolio/src/components/css/About.module.css
+++ b/helloportafolio/src/components/css/About.module.css
@@ -34,7 +34,7 @@
 
 /* separador central */
 .separator {
-  font-size: 8rem;          /* tamaño */
+  font-size: 8rem;         
   color: #016B61;           
   font-weight: 900;        
   
@@ -87,6 +87,7 @@
   gap: 7px;
   transition: 250ms ease-out;
   margin: 0 auto;
+  color: #333333;
 }
 
 /* Estado al pasar mouse: se abren */
@@ -112,7 +113,7 @@
   padding: 15px;
 
   border-radius: 10px;
-  border: 2px solid #016B61;
+  border: 1.3px solid #70B2B2;
   background: #E5E9C5;
 
   display: flex;
@@ -136,7 +137,7 @@
   background: #f1fffb;
   border-color: #019b8a;
   box-shadow: 0 6px 15px rgba(0,0,0,0.2);
-
+  color: #016B61;
   z-index: 50;
   transform: rotate(0deg) translateY(-12px) scale(1.07);
 }
@@ -162,13 +163,15 @@
   font-size: 1.3rem;
   margin-bottom: 10px;
   padding-bottom: 8px;
-  border-bottom: 2px solid #008f7a;
+  border-bottom: 2px solid #016B61;
+  color: #016B61;
 }
 
 .infoCard ul {
   list-style: none;
   padding: 0;
   margin: 0;
+  color: #333333;
 }
 
 .infoCard ul li {
