--- a/helloportafolio/src/components/css/Navbar.module.css
+++ b/helloportafolio/src/components/css/Navbar.module.css
@@ -14,7 +14,7 @@
 }
 
 .link {
-  color: rgb(0, 0, 0);
+  color: #333333;
   text-decoration: none;
   font-weight: 600;
   transition: color 0.3s ease;
