--- a/helloportafolio/src/components/css/Projects.module.css
+++ b/helloportafolio/src/components/css/Projects.module.css
@@ -9,6 +9,8 @@
   text-align: center;
   font-size: 2.5rem;
   margin-bottom: 10px;
+  color: #016B61;
+  
 }
 
 .subtitle {
@@ -16,6 +18,7 @@
   font-size: 1.1rem;
   margin-bottom: 40px;
   opacity: 0.8;
+  color: #333333;
 }
 
 /* --- LISTA DE CARDS --- */
@@ -73,11 +76,13 @@
 .info h2 {
   margin: 0 0 8px 0;
   font-size: 1.4rem;
+  color: #016B61;
 }
 
 .info p {
   margin: 0 0 12px 0;
   opacity: 0.9;
+  color: #333333;
 }
 
 /* --- LISTA DE TECNOLOGÍAS --- */
@@ -95,7 +100,7 @@
   font-size: 0.75rem;
   border-radius: 6px;
   background: #eef1f1;
-  color: #333;
+  color: #70B2B2;
   font-weight: 600;
   letter-spacing: 0.3px;
 }
