--- a/helloportafolio/src/components/css/About.module.css
+++ b/helloportafolio/src/components/css/About.module.css
@@ -17,14 +17,12 @@
   padding-right: 20px;
 }
 
-/* título */
 .title {
   font-size: 2.4rem;
   color: #016B61;
   margin: 0 0 12px 0;
 }
 
-/* párrafo corto */
 .paragraph {
   font-size: 1.05rem;
   line-height: 1.6;
@@ -90,7 +88,6 @@
   color: #333333;
 }
 
-/* Estado al pasar mouse: se abren */
 .skillsGroup:hover .hand {
   grid-template-columns: repeat(var(--count, 5), 100px);
   gap: 0px;
@@ -131,7 +128,6 @@
   font-weight: 600;
 }
 
-/* Al pasar el mouse sobre una carta, se endereza y se mueve */
 .skillsGroup:hover .card:hover {
   transform: rotate(0deg) translateY(-12px);
   background: #f1fffb;
@@ -141,8 +137,6 @@
   z-index: 50;
   transform: rotate(0deg) translateY(-12px) scale(1.07);
 }
-
-
 
 /* Contenedor general */
 .infoSection {
@@ -191,7 +185,6 @@
   background: #f2f2f2;  
 }
 
-/* Hover suave */
 .infoCard ul li:hover {
   transform: translateX(4px);
   background-color: #d7faf3;
@@ -212,8 +205,6 @@
   transition: opacity 0.8s ease, transform 0.8s ease, filter 0.8s ease;
 }
 
-
-/* === Animaciones de entrada izquierda y derecha === */
 
 /* Estado inicial (ocultos) */
 .fadeLeft,
@@ -267,7 +258,7 @@
   }
   .skillsContainer {
     grid-template-columns: 1fr;
-    gap: 30px; /* más estético */
+    gap: 30px; 
   }
 
   .leftSkills,
