--- a/helloportafolio/src/components/css/Experience.module.css
+++ b/helloportafolio/src/components/css/Experience.module.css
@@ -94,9 +94,9 @@
 }
 
 .bigImage {
-  width: 375px;
-  height: 250px;
-  object-fit: cover;
+  width: 100%;
+  height: 250px;          
+  object-fit: cover;      /* Recorta lo necesario para que todas se vean uniformes */
   border-radius: 12px;
   display: block;
   margin: 0 auto 15px;
@@ -154,4 +154,5 @@
   .right, .left { margin-left: 0; text-align: left; padding-left: 48px; }
   .left .dot, .right .dot { left: 8px; right: auto; }
   .content { max-width: 100%; }
+  .bigImage { max-width: 100%; }
 }
